fixes Safari 16 bug: 'overflow-x: clip;' leads to issues in combination with class h-100 on body and html

--- a/css/custom.scss
+++ b/css/custom.scss
@@ -244,7 +244,7 @@ body {
     padding-top: 76px;
   }
 }
-html, body { overflow-x: clip; }
+/* html, body { overflow-x: clip; } */
 section {
   overflow-x: hidden;
 }
